изменение страницы health check
